# IN3110

./: README.md
assignment1/: friendly_greeting.txt  gitconflict.txt
assignment2/: README.md  array_class.py  test_array.py
assignment3/: README.md  pyproject.toml
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  requesting_urls.py
repo-copy-assignment1-task3/: gitconflict.txt
